<resources>
    <string name="app_name">Транспорт Москвы</string>
    <string name="action_settings">Настройки</string>
    <string name="action_remove">Удалить</string>
    <string name="action_select_all">Выделить всё</string>

    <string name="action_mode_title">Выделено %d</string>

    <string name="type_bus_name">Автобус</string>
    <string name="type_trolley_name">Троллейбус</string>
    <string name="type_tram_name">Трамвай</string>

    <string name="add_transport_title">Добавить %1$s</string>
    <string name="add_bus_title_extra">автобус</string>
    <string name="add_trolley_title_extra">троллейбус</string>
    <string name="add_tram_title_extra">трамвай</string>

    <string name="select_stops">Остановки</string>
    <string name="select_route">Укажите маршрут</string>

    <string name="date_monday">понедельник</string>
    <string name="date_tuesday">вторник</string>
    <string name="date_wednesday">среда</string>
    <string name="date_thursday">четверг</string>
    <string name="date_friday">пятница</string>
    <string name="date_saturday">суббота</string>
    <string name="date_sunday">воскресенье</string>

    <string name="date_monday_short">пн</string>
    <string name="date_tuesday_short">вт</string>
    <string name="date_wednesday_short">ср</string>
    <string name="date_thursday_short">чт</string>
    <string name="date_friday_short">пт</string>
    <string name="date_saturday_short">сб</string>
    <string name="date_sunday_short">вс</string>

    <string name="date_monday_capital">Понедельник</string>
    <string name="date_tuesday_capital">Вторник</string>
    <string name="date_wednesday_capital">Среда</string>
    <string name="date_thursday_capital">Четверг</string>
    <string name="date_friday_capital">Пятница</string>
    <string name="date_saturday_capital">Суббота</string>
    <string name="date_sunday_capital">Воскресенье</string>

    <string name="date_monday_short_capital">Пн</string>
    <string name="date_tuesday_short_capital">Вт</string>
    <string name="date_wednesday_short_capital">Ср</string>
    <string name="date_thursday_short_capital">Чт</string>
    <string name="date_friday_short_capital">Пт</string>
    <string name="date_saturday_short_capital">Сб</string>
    <string name="date_sunday_short_capital">Вс</string>

    <string name="date_all">Все дни</string>
    <string name="date_weekdays">Будни</string>
    <string name="date_weekends">Выходные</string>

    <string name="season_winter">Зима</string>
    <string name="season_summer">Лето</string>

    <string name="schedule_days_all_seasons">%s</string>
    <string name="schedule_days_seasons">%s (%s)</string>

    <string name="date_delimiter">", "</string>
    <string name="menu_done">Готово</string>
    <string name="next_in">Ближайший через:</string>
    <string name="schedule_next_in_parenthesis">(%s)</string>
    <string name="schedule_next_in">%s</string>
    <string name="schedule_now">сейчас</string>
    <string name="schedule_late">уходит</string>
    <string name="interval_min">%d м.</string>
    <string name="interval_hour">%d ч.</string>

    <string name="saved_stop_direction">%1$s → %2$s</string>
    <string name="saved_stop_direction_short">→ %1$s</string>

    <string name="provider_name_mosgortrans">Мосгортранс</string>
    <string name="provider_name_avtoline">Автолайн</string>
    <string name="provider_name_moscow_private">Москва (частные)</string>
    <string name="loading">Загрузка</string>
    <string name="loading_routes">Загрузка маршрутов</string>
    <string name="loading_stops">Загрузка остановок</string>
    <string name="loading_schedule">Загрузка расписания</string>

    <!--Errors-->
    <string name="error_title">Ошибка</string>
    <string name="error_loading_stops">Невозможно загрузить остановки</string>
    <string name="retry">Повторить</string>

    <!--Schedule errors-->
    <string name="schedule_error_unknown">Неизвестная ошибка (%s)</string>
    <string name="schedule_error_internet_not_available">Нет соединения с интернетом</string>
    <string name="schedule_error_invalid_schedule_url">Остановка устарела. Попробуйте добавить её заново</string>

    <string name="toast_stops_saved">Добавлено остановок: %d</string>
    <string name="toast_stops_deleted">Удалено остановок: %d</string>

    <string name="schedule_activity_title">Расписание</string>
    <string name="route_input_activity_title">Выберите маршрут</string>
    <string name="choose_route_button_title">Маршрут не выбран</string>
    <string name="schedule_refreshed_toast">Расписание обновлено</string>
    <string name="schedule_cached_toast">Расписание сохранено</string>

    <string name="route_input_prompt">Начните вводить</string>
    <string name="button_title_goto_alpha">АБВ→</string>
    <string name="button_title_goto_digits">←123</string>
    <string name="direction_a">А</string>
    <string name="direction_b">Б</string>
    <string name="direction_title">Направление</string>
    <string name="season_title">Сезон</string>

    <string name="appwidget_single_stop_title">Выберите остановку:</string>

    <string name="widget_season">(%s)</string>
    <string name="no_routes_subtitle">Нажмите на +, чтобы добавить</string>
    <string name="no_routes_title">Нет маршрутов</string>
</resources>
