<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.shalgachev.moscowpublictransport.activities.AddTransportActivity">

    <FrameLayout
        android:id="@+id/bottom_divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:background="@color/divider_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

    </FrameLayout>

    <Button
        android:id="@+id/input_route_button"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:onClick="onClickRouteInput"
        android:text="@string/choose_route_button_title"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/image_transport_icon"
        app:layout_constraintEnd_toStartOf="@+id/image_transport_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/image_transport_icon" />

    <ImageView
        android:id="@+id/image_transport_icon"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ufo_in_circle" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/select_stops"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bottom_divider" />

    <android.support.design.widget.TabLayout
        android:id="@+id/days_tabs"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:tabMode="scrollable" />

    <android.support.v4.view.ViewPager
        android:id="@+id/stops_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/days_tabs" />

    <TextView
        android:id="@+id/direction_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/direction_title"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <TextView
        android:id="@+id/season_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/season_title"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/season_group"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <FrameLayout
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:background="@color/divider_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_transport_icon">

    </FrameLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/direction_title"
        app:layout_constraintWidth_max="200dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|start"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|start"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/direction_a"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/direction_a_circle"
                    android:gravity="center"
                    android:text="@string/direction_a"
                    android:textAlignment="center"
                    android:textSize="@dimen/direction_text_size"
                    tools:layout_editor_absoluteX="16dp"
                    tools:layout_editor_absoluteY="156dp" />

                <TextSwitcher
                    android:id="@+id/text_direction_from"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:maxLines="2"
                    android:measureAllChildren="false"
                    android:text="From"
                    android:textAlignment="viewStart"
                    app:layout_constraintStart_toEndOf="@+id/direction_a"
                    tools:layout_editor_absoluteY="188dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|start"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/direction_b"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/direction_b_circle"
                    android:gravity="center"
                    android:text="@string/direction_b"
                    android:textAlignment="center"
                    android:textSize="@dimen/direction_text_size"
                    tools:layout_editor_absoluteX="16dp"
                    tools:layout_editor_absoluteY="189dp" />

                <TextSwitcher
                    android:id="@+id/text_direction_to"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1"
                    android:maxLines="2"
                    android:measureAllChildren="false"
                    android:text="To"
                    android:textAlignment="viewStart"
                    tools:layout_editor_absoluteX="56dp"
                    tools:layout_editor_absoluteY="205dp" />
            </LinearLayout>

        </LinearLayout>

        <ImageButton
            android:id="@+id/button_toggle_direction"
            style="@style/Widget.AppCompat.ImageButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:background="@null"
            android:onClick="onClickSwapDirections"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/change_direction_circle"
            tools:layout_editor_absoluteX="198dp"
            tools:layout_editor_absoluteY="379dp" />

    </LinearLayout>

    <RadioGroup
        android:id="@+id/season_group"
        android:layout_width="wrap_content"
        android:layout_height="65dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="16dp"
        android:gravity="start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/season_title">

        <RadioButton
            android:id="@+id/season_winter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/season_winter"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/season_summer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:text="@string/season_summer"
            android:textSize="18sp" />
    </RadioGroup>

    <android.support.constraint.Barrier
        android:id="@+id/barrier2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="right"
        app:constraint_referenced_ids="linearLayout"
        tools:layout_editor_absoluteX="360dp" />

</android.support.constraint.ConstraintLayout>
